--- a/app/src/main/res/drawable/custom_button.xml
+++ b/app/src/main/res/drawable/custom_button.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<item>
+    <shape android:shape="rectangle">
+        <solid android:color="@color/browndarksouls" />
+        <corners android:radius="10dp" />
+    </shape>
 
-    <solid android:color="#5D452B"/>
-    <stroke
-        android:color="#B59351"
-        android:width="2dp"
-        />
-    <corners android:radius="15dp" />
-
-</shape>
+</item>
+</selector>
