--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/textWelcome"
+        android:id="@+id/textvWelcome"
         android:layout_width="360dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -24,18 +24,18 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/textDescription"
+        android:id="@+id/textvDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textWelcome"
+        android:layout_alignBottom="@+id/textvWelcome"
         android:layout_marginStart="12dp"
         android:layout_marginTop="12dp"
         android:text="Una APP para fans"
         android:fontFamily="@font/fontdarksouls"
         android:textColor="@color/white"
         android:textSize="20dp"
-        app:layout_constraintStart_toStartOf="@+id/textWelcome"
-        app:layout_constraintTop_toBottomOf="@+id/textWelcome" />
+        app:layout_constraintStart_toStartOf="@+id/textvWelcome"
+        app:layout_constraintTop_toBottomOf="@+id/textvWelcome" />
 
     <LinearLayout
         android:layout_width="match_parent"
