--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -53,6 +53,37 @@
             android:layout_below="@id/card_title"
             />
 
+        <LinearLayout
+            android:id="@+id/optionsCrud"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/editCard"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_marginVertical="6dp"
+                android:src="@drawable/editpencil"
+                />
+
+            <ImageView
+                android:id="@+id/deleteCard"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_marginVertical="6dp"
+                android:src="@drawable/baseline_delete"
+                />
+
+
+
+
+
+        </LinearLayout>
+
+
+
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
