--- a/app/src/main/res/layout/fragment_armas.xml
+++ b/app/src/main/res/layout/fragment_armas.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/fondo"
     tools:context=".ArmasFragment">
 
     <ScrollView
@@ -19,6 +20,7 @@
     </ScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabAddArmas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
