--- a/app/src/main/res/layout/fragment_personajes.xml
+++ b/app/src/main/res/layout/fragment_personajes.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/fondo"
     tools:context=".ArmasFragment">
 
     <ScrollView
@@ -10,6 +11,7 @@
         android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewPersonajes"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:listitem="@layout/card_layout" />
