--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,18 +2,24 @@
     <!-- Base application theme. -->
     <style name="Theme.DarkSoulsAPP" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Primary brand color.
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@color/browndarksouls</item>
+        <item name="colorPrimaryVariant">@color/browndarksouls</item>
+        <item name="colorOnPrimary">@color/browndarksouls2</item>
         -->
-        <!-- Secondary brand color.
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
-        -->
+
         <!-- Status bar color.
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         -->
         <!-- Customize your theme here. -->
+
     </style>
+
+    <!--Splash Screen
+    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/black</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/darksoulslogo</item>
+        <item name="windowSplashScreenAnimationDuration">300</item>
+        <item name="postSplashScreenTheme">@style/Theme.DarkSoulsAPP</item>
+    </style>
+    -->
 </resources>
